Updated Income, thing

--- a/transactions.html
+++ b/transactions.html
@@ -11,12 +11,12 @@
       </div>
       <div class="nav-expense">Expense</div>
     </div>
-    <div class="nav-item" id="income">
+    <!-- <div class="nav-item" id="income">
       <div class="nav-img">
        <img src="img/chart-down.png" alt="">
       </div>
       <div class="nav-income">Income</div>
-    </div>
+    </div> -->
     <div class="nav-item" id="savings">
       <div class="nav-img">
         <img src="img/jar.png" alt="">
