--- a/dashboard.html
+++ b/dashboard.html
@@ -5,21 +5,14 @@
       </div>
 
       <div class="total-info">
-        <div class="income-index">
-          <div class="image-income">
-            <img src="img/increase.png" alt="" />
-          </div>
-          <div class="income-text">Income</div>
-          <div class="income-insights">$3,950</div>
-        </div>
-
+        
         <div class="expense-index">
           <div class="image-expense">
             <img src="img/decrease.png" alt="" />
           </div>
 
           <div class="expense-text">Expense</div>
-          <div class="expense-insights">$1,050</div>
+          <div class="expense-insights"></div>
         </div>
 
         <div class="savings-index">
@@ -27,7 +20,7 @@
             <img src="img/piggy-bank.png" alt="" />
           </div>
           <div class="savings-text">Savings</div>
-          <div class="savings-insights">$2,350</div>
+          <div class="savings-insights"></div>
         </div>
       </div>
 
