--- a/expenseList.html
+++ b/expenseList.html
@@ -1,3 +1,5 @@
+
+
 <div class="emb-title">Transaction History</div>
 
 <h4>Manage and view all your expense</h4>
@@ -22,13 +24,20 @@
   <div class="option-selector">
     <select id="category" name="selectedOption">
       <option value="option1">All</option>
-      <option value="option2">Option 2</option>
-      <option value="option3">Option 3</option>
+      <option value="option2">Food</option>
+      <option value="option3">Transport</option>
+      <option value="option4">Entertainment</option>
+      <option value="option5">Shopping</option>
+      <option value="option6">Bills</option>
+      <option value="option7">Coffee</option>
+      <option value="option8">Bank</option>
+      <option value="option9">Cash</option>
+      <option value="option10">Others</option>
     </select>
     <select id="time" name="selectedOptionDate">
       <option value="option1">All time</option>
-      <option value="option2">Option 2</option>
-      <option value="option3">Option 3</option>
+      <option value="option2">Within Last month</option>
+      <option value="option3">Within Last 3 months</option>
     </select>
   </div>
 
@@ -48,6 +57,4 @@
   </div>
 </div>
 
-<div class="ei-list">
-  
-</div>
+<div class="ei-list"></div>
