--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="styles/expenseList.css" />
     <link rel="stylesheet" href="styles/settings.css" />
     <link rel="stylesheet" href="styles/transactions.css" />
-
   </head>
   <body>
     <div class="top-nav">
@@ -157,6 +156,9 @@
       </div>
     </div>
   </body>
-
+  <script
+    type="module"
+    src="https://cdn.jsdelivr.net/npm/chart.js@4.4.3/dist/chart.umd.min.js"
+  ></script>
   <script type="module" src="scripts/index.js"></script>
 </html>
