--- a/expenseList.html
+++ b/expenseList.html
@@ -1,5 +1,3 @@
-
-
 <div class="emb-title">Transaction History</div>
 
 <h4>Manage and view all your expense</h4>
@@ -53,6 +51,24 @@
         <img src="img/hide.png" width="20px" alt="" />
       </div>
       <div class="expense-only-part">Expense Only</div>
+    </div>
+  </div>
+</div>
+
+<div class="history-arrangement">
+  <div class="ha-left" id="transaction-count">0 transactions total</div>
+  <div class="ha-right">
+    <div class="ha-right-date" id="sort-date">
+      <div class="hard-title">Date</div>
+      <div class="hard-png">
+        <img src="img/pngegg.png" alt="" width="10px" />
+      </div>
+    </div>
+    <div class="ha-right-amount" id="sort-amount">
+      <div class="hara-title">Amount</div>
+      <div class="hara-png">
+        <img src="img/pngegg.png" alt="" width="10px" />
+      </div>
     </div>
   </div>
 </div>
