Completed all js

--- a/settings.html
+++ b/settings.html
@@ -144,7 +144,7 @@
     </section>
 
     <section class="card about-card">
-      <i class="fas fa-heart icon-large"></i>
+      <div class="heart-verdora"><img src="img/heartie.png" alt=""></div>
       <h2>Verdora v2.1.0</h2>
       <p class="tagline">Made with love for Gen Z finances</p>
       <div class="about-links">
