Last Finishing touch

--- a/settings.html
+++ b/settings.html
@@ -21,16 +21,16 @@
       </div>
       <div class="contact-info">
         <p>
-          <i class="fas fa-envelope icon"></i> Email:
-          <span>jane.doe@example.com</span>
+          <i class="fas fa-envelope icon"></i> Email: 
+          <span> namyaagaur@example.com</span>
         </p>
         <p>
           <i class="fas fa-phone icon"></i> Phone:
-          <span>+1 (555) 123-4567</span>
+          <span>+91 7983XXXXXX</span>
         </p>
         <p>
           <i class="fas fa-map-marker-alt icon"></i> Location:
-          <span>San Francisco, CA</span>
+          <span>India</span>
         </p>
       </div>
     </section>
